# MarloweSC-Execution

./: .gitignore  LICENSE  README.md  WolframOracleUpdater.ipynb
MilestoneFour/: ResponseToAuditReport.md
MilestoneOne/: README.md  WolframOracleContract.ipynb  WolframOracleUpdater.ipynb  wolframOracleUpdater.plutus
MilestoneThree/: README.md  TestServiceUsingMarlowe.ipynb
MilestoneTwo/: README.md
MilestoneTwo/.ipynb_checkpoints/: WolframOracleHarvester-checkpoint.ipynb
OracleHarvester/: .gitignore  README.md  docker-compose-build.yaml  docker-compose-up.yaml
OracleHarvester/file-builder/: Dockerfile  builder.sh  cleaner.sh  docker-compose.yaml  entrypoint.sh  package.json
OracleHarvester/file-builder/marloweStatics/: statics.marlowe
OracleHarvester/file-builder/src/: app.js  ccdb.js  config.js  currentMarloweStep.js  db.js  marloweFuncs.js  nextMarloweStep.js  test.js  utils.js
OracleHarvester/filter/: Dockerfile  README.md  package.json
OracleHarvester/filter/src/: config.js  filter.js  sink.js
OracleHarvester/kafka/: Dockerfile  README.md  docker-compose-build.yaml  docker-compose-up.yaml  entrypoint.sh
OracleHarvester/kafka/commands/: create-topics.sh  delete-topics.sh  list-topics.sh
OracleHarvester/listener/: README.md  entrypoint.sh  package.json
OracleHarvester/listener/src/: config.js  file_handler.js  logger.js  tx-listener.js
OracleHarvester/tx-builder/: txBuilder.sh  txBuilder.wls
OracleValidator/: OracleValidator.cabal  cabal.project
OracleValidator/scripts/: oracle.datum  oracleDatum.datum  wolframOracleUpdater.plutus
OracleValidator/src/: MinimalTypes.hs  OracleValidator.hs  Types.hs  Utils.hs
