cabal-version:      2.4
name:               oracleDatumReader
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    --main-is:          Main.hs
    exposed-modules:
              OracleValidator,
              Types,
              Utils

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:   aeson
                     , base ^>=4.14.3.0
                     , bytestring
                     , containers
                     , data-default
                     , plutus-ledger
                     , cardano-api
                     , plutus-ledger-api
                     , plutus-script-utils ^>=1.2.0.0
                             , plutus-tx-plugin
                     , plutus-tx
                     , serialise
                     , text
                     , newtype-generics
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
